<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Trending_Movies"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/first_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Now_Playing"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/second_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/upcoming"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/third_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/top_rated"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/fourth_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="48dp"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
