<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/movie_detail_layout"
    tools:context=".MovieDetailActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <ImageButton
               android:layout_width="30dp"
               android:layout_height="30dp"
               android:src="@drawable/cancel"
               android:layout_marginTop="20dp"
               android:layout_gravity="right"
               android:id="@+id/btn_cancel"
               />
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               >
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_gravity="center">
               <ImageView
                   android:layout_width="120dp"
                   android:layout_height="170dp"
                   android:id="@+id/iv_poster"
                   android:layout_gravity="center"
                   android:layout_marginTop="8dp"
                   android:src="@drawable/ic_launcher_background"/>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_margin="8dp"
                   android:layout_gravity="center">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="year"
                       android:id="@+id/txt_releaseyear"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="8dp"
                       android:text="isAdult"
                       android:id="@+id/txt_isAdult">
                   </TextView>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Duration"
                       android:layout_marginLeft="8dp"
                       android:id="@+id/txt_duration"/>
               </LinearLayout>
               </LinearLayout>
           </androidx.cardview.widget.CardView>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center"
               android:layout_margin="8dp"
               android:layout_gravity="center"
               android:id="@+id/layout_play">
               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/play"
                   android:id="@+id/imv_play"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/Play"
                   android:textStyle="bold"
                   android:textSize="20dp"
                   android:id="@+id/txt_play"/>
           </LinearLayout>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/txt_movieOverview"
               android:text="Movie Overview"
               android:layout_margin="8dp"
               android:layout_marginTop="8dp">
           </TextView>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_margin="8dp"
               android:layout_marginLeft="16dp"
               android:id="@+id/layout_mylist">
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/plus"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/mylist"
                   android:layout_gravity="center"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_margin="8dp"
               android:layout_marginLeft="16dp"
               android:id="@+id/layout_rating">
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/review"
                   android:layout_gravity="center">

               </ImageView>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/rate"
                   android:layout_gravity="center"/>
           </LinearLayout>
           </LinearLayout>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="MORE LIKE THIS"
               android:layout_margin="8dp"/>
           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="8dp"
               android:layout_marginLeft="8dp"
               android:id="@+id/similar_movie_rv">

           </androidx.recyclerview.widget.RecyclerView>

       </LinearLayout>
   </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>